=head1 NAME

Changes - Apache::Test change logfile

=head1 CHANGES

=over 3

=item 1.01-dev

perlpods are found either in the 'pods/' or 'pod/' subdirs [Randal
L. Schwartz <merlyn@stonehenge.com>]

Autoconfigure Alias /getfiles-* only if the corresponding targets
exist [Stas]

=item 1.00

when inheriting httpd.conf on some platforms SERVER_CONFIG_FILE is an
absolute path, so try to use that if found. [Haroon Rafique
<haroon.rafique@utoronto.ca>]

new Apache::Test functions: 
have_min_apache_version - to require a minimal Apache version. 
have_apache_version     - to require a specific Apache version. 
[Stas]

Apache::TestUtil API change:
write_perl_script  => t_write_perl_script
write_shell_script => t_write_shell_script 
chown              => t_chown
All 3 functions are now optionally exported [Geoffrey Young].

Provide a new request macro _BODY_ASSERT to replace _BODY in cases
where the client part of the test directly prints to the output, in
order to avoid skipped tests instead of reporting the failure of the
server side. Use it in automatically generated tests. [Stas]

httpd (1.3 && 2) / winFU have problems when the first path's segment
includes ':' (security precaution which breaks the rfc) so we can't
use /TestFoo::bar as path_info in Apache::Tests. Adjusting all tests
to use /TestFoo__bar. [Stas]

change Apache::TestConfig::filter_args to accept arguments which
aren't only key/value pairs, but also tokens like 'FOO=1' [Stas]

In autogenerated t/TEST, make sure not to include 'use Apache2' for
the mod_perl 2.0 build itself [Stas]

avoid starting httpd with 'Group root' when running the test suite
under root [Stas]

add support for 'make test TEST_VERBOSE=1 "TEST_FILES=foo bar"' [Stas]

Apache::Test now can run 'make test' under 'root', without permission
problems (e.g. when files need to be written), it'll chown all the
files under t/ to the user chosen to run the server with, before
running the tests and will restore the permissions at the end. [Stas]
